--- a/ChampionsQuest/src/main/resources/application.properties
+++ b/ChampionsQuest/src/main/resources/application.properties
@@ -13,4 +13,5 @@ spring.jpa.hibernate.ddl-auto = update
 # show queries on console
 spring.jpa.show-sql = false
 
-logging.file.path = /var/tmp/myspringlog.log
+logging.file.name=myapplication.log
+
